# femheat

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: femheat.cpp
include/femheat/: assembler.hpp  boundary_condition.hpp  build_info.hpp  element.hpp  hdf5_writer.hpp  heat_problem.hpp  line2.hpp  linear_solver.hpp  material.hpp  mesh1d.hpp  mms.hpp  point.hpp  tri3.hpp  tri_mesh.hpp
scripts/: plot_field.py
src/: assembler.cpp  boundary_condition.cpp  build_info.cpp  hdf5_writer.cpp  heat_problem.cpp  line2.cpp  linear_solver.cpp  mesh1d.cpp  mms.cpp  tri3.cpp  tri_mesh.cpp
tests/: test_assembler.cpp  test_io.cpp  test_line2.cpp  test_mms1d.cpp  test_mms2d.cpp  test_neumann.cpp  test_smoke.cpp  test_solve1d.cpp  test_tri3.cpp
